# FastCLOC-Py

./: LICENSE  README.md  pyproject.toml
docs/: TEST_RECORD.md  USAGE.md
evidence/: file_tree.txt  git_commit_record.txt  git_full_record.txt  sample_json.json  sample_table.txt
src/fastcloc/: __init__.py  api.py  cli.py  comments.py  counter.py  detector.py  diff.py  languages.py  models.py  project.py  reporters.py  scanner.py  security.py  utils.py
tests/: test_cli_integration.py  test_counter.py  test_detector.py  test_reporters.py  test_security.py
tests/fixtures/: app.js  example.py
tools/: count_effective_loc.py
