[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcloc-py"
version = "0.1.0"
description = "A Python rewrite of the cloc code line counter with safer scanning and richer reports."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Student Contributor"}]
keywords = ["cloc", "source-code", "metrics", "line-counter", "rewrite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
fastcloc = "fastcloc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
